# ajf

./: CHANGELOG.md  package.json  packages.bzl  rollup-globals.bzl
.github/: CODEOWNERS
projects/core/chart/src/: chart.ts
projects/core/reports/src/: chart-utils.ts  public_api.ts  widget-export.spec.ts
projects/dev-app/src/: widgets.ts
scripts/: publish.mjs
src/core/: BUILD.bazel  package.json  pdfmake.d.ts
src/core/chart/: chart.ts
src/core/common/: check-if-valid.ts  common-module.ts
src/core/forms/: field.ts  form-renderer-utils.ts  forms.md  nodes-instances.ts  nodes.ts
src/core/geolocation/: BUILD.bazel  geolocation-interface.ts  geolocation.ts  public-api.ts  tsconfig-build.json
src/core/reports/: BUILD.bazel  pdfmake.d.ts  public-api.ts
src/dev-app/: BUILD.bazel
src/dev-app-ion/: dev-app-module.ts  dev-app.ts  index.html  routes.ts  system-config.ts
src/dev-app-ion/geolocation/: geolocation-demo.html  geolocation-demo.scss  geolocation-demo.ts
src/dev-app-mat/: ajf-module.ts  dev-app-module.ts  dev-app.ts  index.html  routes.ts  system-config.ts
src/dev-app-mat/geolocation/: geolocation-demo.ts
src/dev-app-mat/node-icon/: node-icon-demo.ts
src/dev-app-mat/reports/: report.ts  reports-demo-module.ts  reports-demo.html  reports-demo.scss  reports-demo.ts
src/dev-app/mat-reports/: reports-demo.ts
src/e2e-app/: BUILD.bazel
src/e2e-app-mat/: BUILD.bazel
src/ionic/forms/: BUILD.bazel  field.html
src/ionic/geolocation/: BUILD.bazel  geolocation-module.ts  geolocation.scss  geolocation.ts  public-api.ts
src/material/forms/: BUILD.bazel  field.html  forms-module.ts
src/material/geolocation/: geolocation.html  geolocation.scss  geolocation.spec.ts  tsconfig-build.json
src/material/report-builder/: forms-analyzer-dialog.ts
test/: karma-system-config.js
tools/third-party-libs/: BUILD.bazel
(+15 files in other folders)
