package(default_visibility=["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "geolocation",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@ajf/core/geolocation",
  assets = [],
  deps = [
    "@angular//packages/core",
    "@angular//packages/forms",
    "@ajfdeps//@types/leaflet"
  ],
)

ng_test_library(
  name = "geolocation_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/platform-browser",
    ":geolocation"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":geolocation_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)