package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//sass:sass.bzl", "sass_library", "sass_binary")
load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "geolocation",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@ajf/material/geolocation",
  assets = [":geolocation.css"] + glob(["**/*.html"]),
  deps = [
    "@angular//packages/common",
    "@angular//packages/core",
    "@angular//packages/forms",
    "@ngx_translate_core//:core",
    "//src/core/geolocation",
  ],
)

sass_binary(
  name = "geolocation_scss",
  src = "geolocation.scss",
  deps = [],
)

ng_test_library(
  name = "geolocation_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@angular//packages/platform-browser",
    ":geolocation"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":geolocation_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
